tests/cases/diff/terraform/terraform_008_security_group_rule_after.yaml
modules/security_group/main.tf: |
  resource "aws_security_group" "this" {
    name        = var.name
    description = var.description
    vpc_id      = var.vpc_id

    dynamic "ingress" {
      for_each = var.ingress_rules
      content {
        from_port       = ingress.value.from_port
        to_port         = ingress.value.to_port
        protocol        = ingress.value.protocol
        cidr_blocks     = ingress.value.cidr_blocks
        security_groups = ingress.value.security_groups
        description     = ingress.value.description
      }
    }

    dynamic "egress" {
      for_each = var.egress_rules
      content {
        from_port       = egress.value.from_port
        to_port         = egress.value.to_port
        protocol        = egress.value.protocol
        cidr_blocks     = egress.value.cidr_blocks
        security_groups = egress.value.security_groups
        description     = egress.value.description
      }
    }

    tags = merge(var.tags, { Name = var.name })
  }
modules/security_group/variables.tf: |
  variable "name" {
    type = string
  }

  variable "description" {
    type    = string
    default = "Managed by Terraform"
  }

  variable "vpc_id" {
    type = string
  }

  variable "ingress_rules" {
    type = list(object({
      from_port       = number
      to_port         = number
      protocol        = string
      cidr_blocks     = optional(list(string), [])
      security_groups = optional(list(string), [])
      description     = optional(string, "")
    }))
    default = []
  }

  variable "egress_rules" {
    type = list(object({
      from_port       = number
      to_port         = number
      protocol        = string
      cidr_blocks     = optional(list(string), [])
      security_groups = optional(list(string), [])
      description     = optional(string, "")
    }))
    default = [{
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }]
  }

  variable "tags" {
    type    = map(string)
    default = {}
  }
modules/security_group/outputs.tf: |
  output "security_group_id" {
    value = aws_security_group.this.id
  }

  output "security_group_arn" {
    value = aws_security_group.this.arn
  }
infrastructure/security.tf: |
  module "web_sg" {
    source      = "./modules/security_group"
    name        = "web-sg-${var.environment}"
    description = "Security group for web servers"
    vpc_id      = module.vpc.vpc_id

    ingress_rules = [
      {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        description = "HTTPS from anywhere"
      },
      {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        description = "HTTP from anywhere (redirects to HTTPS)"
      }
    ]

    tags = local.common_tags
  }

  module "app_sg" {
    source      = "./modules/security_group"
    name        = "app-sg-${var.environment}"
    description = "Security group for application servers"
    vpc_id      = module.vpc.vpc_id

    ingress_rules = [
      {
        from_port       = 8080
        to_port         = 8080
        protocol        = "tcp"
        security_groups = [module.web_sg.security_group_id]
        description     = "Application port from web tier"
      },
      {
        from_port       = 22
        to_port         = 22
        protocol        = "tcp"
        security_groups = [module.bastion_sg.security_group_id]
        description     = "SSH from bastion"
      }
    ]

    tags = local.common_tags
  }

  module "db_sg" {
    source      = "./modules/security_group"
    name        = "db-sg-${var.environment}"
    description = "Security group for database"
    vpc_id      = module.vpc.vpc_id

    ingress_rules = [
      {
        from_port       = 5432
        to_port         = 5432
        protocol        = "tcp"
        security_groups = [module.app_sg.security_group_id]
        description     = "PostgreSQL from application tier"
      }
    ]

    egress_rules = []

    tags = local.common_tags
  }
unrelated/waf.tf: |
  # GARBAGE_TF_WAF_448_001
  resource "aws_wafv2_web_acl" "unrelated_waf" {
    name  = "GARBAGE_WAF_ACL_448_002"
    scope = "REGIONAL"

    default_action {
      allow {}
    }

    visibility_config {
      cloudwatch_metrics_enabled = false
      metric_name               = "GARBAGE_WAF_METRIC_448_003"
      sampled_requests_enabled  = false
    }
  }
unrelated/shield.tf: |
  # GARBAGE_TF_SHIELD_448_004
  resource "aws_shield_protection" "unrelated_shield" {
    name         = "GARBAGE_SHIELD_448_005"
    resource_arn = "arn:aws:elasticloadbalancing:us-east-1:123456789:loadbalancer/app/GARBAGE_ALB_448_006/1234567890"
  }

  variable "GARBAGE_SHIELD_VAR_448_007" {
    default = "unrelated-shield-config"
  }
